--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -4,7 +4,7 @@
     <h1>My Blog</h1>
     {% for post in posts %}
         <h2>
-            <a href="{% url 'post_detail' post.id %}">
+            <a href="{% url 'post' post.id%}">
                 {{ post.title }}
             </a>
         </h2>
