--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -1,11 +1,12 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
-    <h1>{{ post.title }}</h1>
+    <h1>{{ post.title|capfirst }}</h1>
     <p class="date">
         Published {{ post.publish }} by {{ post.author }}
     </p>
-    {{ post.body|linebreaks }}
+    {{ post.body|markdown }}
     <p>
         <a href="{% url "post_share" post.id %}">
             Share this post
@@ -14,7 +15,7 @@
     <h2>Similar posts</h2>
     {% for post in similar_posts %}
     <p>
-        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        <a href="{{ post.get_absolute_url }}">{{ post.title|capfirst }}</a>
     </p>
     {% empty %}
         There are no similar posts yet.
