--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
     <h1>My Blog</h1>
@@ -8,14 +9,14 @@
     {% for post in posts %}
         <h2>
             <a href="{{ post.get_absolute_url }}">
-                {{ post.title }}
+                {{ post.title|capfirst }}
             </a>
         </h2>
         <p class="tags">
             Tags:
             {% for tag in post.tags.all %}
                 <a href="{% url 'post_list_by_tag' tag.slug %}">
-                    {{ tag.name }}
+                    {{ tag.name|capfirst }}
                 </a>
                 {% if not forloop.last %}, {% endif %}
             {% endfor %}
@@ -23,7 +24,7 @@
         <p class="date">
             Published {{ post.publish }} by {{ post.author }}
         </p>
-        {{ post.body|truncatewords:30|linebreaks }}
+        {{ post.body|markdown|truncatewords_html:30 }}
     {% endfor %}
     {% include "parts/pagination.html" with page=posts %}
 {% endblock %}
